# numpoly

./: .gitignore  .pylintrc  .readthedocs.yaml  CHANGELOG.rst  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  codecov.yml  conftest.py  pyproject.toml  requirements-dev.txt  setup.py  tasks.rst
.circleci/: config.yml
doc/: array_function.rst  baseclass.rst  comparison.rst  conf.py  construct.rst  derivative.rst  division.rst  index.rst  initialization.rst  introduction.rst  poly_function.rst  requirements.txt
docs/: about_us.rst  array_function.rst  comparison.rst  conf.py  differentiation.rst  division.rst  get_started.rst  index.rst  initialization.rst  installation.rst  introduction.rst  reference.rst  requirements.txt  user_guide.rst
docs/reference/: baseclass.rst  constructor.rst  index.rst  mathematics.rst  miscellaneous.rst  shaping.rst
docs/user_guide/: array_function.rst  comparison.rst  comparison_operators.rst  division.rst  index.rst  introduction.rst  numpy_functions.rst  polynomial_division.rst  polynomial_evaluation.rst  polynomial_expansion.rst
numpoly/: __init__.py  align.py  array_function.py  baseclass.py  call.py  construct.py  derivative.py  dispatch.py  exponent.py  export.py  item.py  monomial.py  option.py  poly_function.py  string.py  sympy_.py
numpoly/array_function/: __init__.py  absolute.py  add.py  all.py  allclose.py  amax.py  amin.py  any.py  apply_along_axis.py  apply_over_axes.py  argmax.py  argmin.py  around.py  array_repr.py  array_split.py  array_str.py  atleast_1d.py  atleast_2d.py  atleast_3d.py  broadcast_arrays.py  ceil.py  choose.py  common.py  common_type.py  concatenate.py  copyto.py  count_nonzero.py  cumsum.py  det.py  diag.py  diagonal.py  diff.py  divide.py  divmod.py  dsplit.py  dstack.py  ediff1d.py  equal.py  expand_dims.py  floor.py  (+56 more)
numpoly/cfunctions/: __init__.py  cdispach.pyx  cfrom_attributes.c  cfrom_attributes.pyx  cmultiply.c  cmultiply.html  cmultiply.pyx  cvalues.c  cvalues.pyx
numpoly/construct/: __init__.py  aspolynomial.py  clean.py  compose.py  from_attributes.py  from_roots.py  monomial.py  polynomial.py  symbols.py  variable.py
numpoly/construct/monomial/: __init__.py  bindex.py  cross_truncation.py  frontend.py
numpoly/poly_function/: __init__.py  call.py  decompose.py  derivative.py  isconstant.py  largest_exponent.py  lead_coefficient.py  lead_exponent.py  monomial.py  poly_divide.py  set_dimensions.py  sortable_proxy.py  symbols.py  toarray.py  tonumpy.py
numpoly/poly_function/divide/: __init__.py  divide.py  divmod.py  remainder.py
numpoly/poly_function/monomial/: bindex.py  cross_truncation.py  frontend.py
numpoly/utils/: __init__.py  bindex.py  bsort.py  cross_truncation.py  glexindex.py  glexsort.py
test/: test_align.py  test_array_function.py  test_baseclass.py  test_construct.py  test_dispatch.py  test_option.py  test_poly_function.py  test_save_load.py  test_utils.py
