[build-system]
requires = ["setuptools>=40.9.0", "wheel", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "numpoly"
version = "1.3.0"
description = "Polynomials as a numpy datatype"
license = {text = "BSD-2-Clause"}
readme = "README.rst"
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Science/Research",
        "Topic :: Scientific/Engineering :: Mathematics",
        "License :: OSI Approved :: BSD License",
        "Natural Language :: English",
]

requires-python = ">=3.7"
dependencies = [
  "numpy >=1.20",
  "setuptools >=40.9.0",
  "importlib-metadata",
]

[project.optional-dependencies]
dev = [
  "black ==23.3.0",
  "pylint ==2.15.5",
  "pydocstyle ==3.0.0",
  "pydata_sphinx_theme ==0.15.2",
  "sympy",
  "pytest",
  "pytest-cov",
  "codecov",
  "coverage >=5.0",
  "Sphinx",
  "sphinx_automodapi",
]

[tool.pytest.ini_options]
filterwarnings = [
  "error::DeprecationWarning",
  "ignore:elementwise:DeprecationWarning",
  "ignore:Calling nonzero on 0d arrays:DeprecationWarning"
]
