[build-system]
requires = ["setuptools>=40.9.0", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "numpoly"
version = "0.1.0"
description = "Polynomials as a numpy datatype"
license = {text = "BSD-2-Clause"}
readme = "README.rst"
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Science/Research",
        "Topic :: Scientific/Engineering :: Mathematics",
        "Natural Language :: English",
]

requires-python = ">=3.9"
dependencies = [
  "numpy >=2.0.0",
  "setuptools >=40.9.0",
  "importlib-metadata",
]

[project.optional-dependencies]
dev = [
  "black",
  "pylint",
  "pydocstyle ==3.0.0",
  "pydata_sphinx_theme",
  "sympy",
  "pytest",
  "pytest-cov",
  "codecov",
  "coverage",
  "Sphinx",
  "sphinx_automodapi",
]

[tool.pytest.ini_options]
filterwarnings = [
  "error::DeprecationWarning",
  "ignore:elementwise:DeprecationWarning",
  "ignore:Calling nonzero on 0d arrays:DeprecationWarning"
]
